# gnome-online-accounts

./: Makefile.am  configure.ac
doc/: goa-docs.xml  goa-sections.txt  goa.types
src/goabackend/: Makefile.am  goaexchangemodule.c  goaexchangeprovider.c  goaexchangeprovider.h  goafacebookmodule.c  goafacebookprovider.c  goafacebookprovider.h  goaflickrmodule.c  goaflickrprovider.c  goaflickrprovider.h  goagooglemodule.c  goagoogleprovider.c  goagoogleprovider.h  goaowncloudmodule.c  goaowncloudprovider.c  goaowncloudprovider.h  goapocketmodule.c  goapocketprovider.c  goapocketprovider.h  goaprovider.c  goawindowslivemodule.c  goawindowsliveprovider.c  goawindowsliveprovider.h
